--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
+.DS_Store
 .bundle
 .rspec
 db/*.sqlite3
 db/*.sqlite3-journal
 log/*.log
 tmp/**/*
-.DS_Store
 webrat.log
 pkg/*
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
