--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -7,6 +7,7 @@ gem 'builder'
 # To use debugger
 # gem 'ruby-debug'
 
+gem 'rails_admin', :path => "../../"
 gem 'devise'
 
 # Bundle gems for the local environment. Make sure to
