Updated dummy app from specs

--- a/spec/dummy/Rakefile
+++ b/spec/dummy/Rakefile
@@ -4,4 +4,4 @@
 require File.expand_path('../config/application', __FILE__)
 require 'rake'
 
-RailsAdmin::Application.load_tasks
+Dummy::Application.load_tasks
