--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -4,8 +4,20 @@ gem 'rails', '3.0.0.rc2'
 gem 'sqlite3-ruby', :require => 'sqlite3'
 gem 'builder'
 
+# Use unicorn as the web server
+# gem 'unicorn'
+
+# Deploy with Capistrano
+# gem 'capistrano'
+
 # To use debugger
 # gem 'ruby-debug'
+
+# Bundle the extra gems:
+# gem 'bj'
+# gem 'nokogiri'
+# gem 'sqlite3-ruby', :require => 'sqlite3'
+# gem 'aws-s3', :require => 'aws/s3'
 
 gem 'devise'
 
@@ -17,3 +29,5 @@ group :development, :test do
   gem "rspec-rails", ">= 2.0.0.beta.20"
   gem "webrat", :git => "git://github.com/kalv/webrat.git"
 end
+
+
