--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -28,4 +28,5 @@ group :development, :test do
   gem "launchy", ">= 0.3.0"
   gem "rspec-rails", ">= 2.0.0.beta.20"
   gem "webrat", :git => "git://github.com/kalv/webrat.git"
+  gem "dummy_data"
 end
