--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -1,32 +1,15 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.0.0.rc2'
-gem 'sqlite3-ruby', :require => 'sqlite3'
+gem 'rails', '3.0.0'
 gem 'builder'
-
-# Use unicorn as the web server
-# gem 'unicorn'
-
-# Deploy with Capistrano
-# gem 'capistrano'
-
-# To use debugger
-# gem 'ruby-debug'
-
-# Bundle the extra gems:
-# gem 'bj'
-# gem 'nokogiri'
-# gem 'sqlite3-ruby', :require => 'sqlite3'
-# gem 'aws-s3', :require => 'aws/s3'
-
 gem 'devise'
 
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development, :test do
-  gem "launchy", ">= 0.3.0"
-  gem "rspec-rails", ">= 2.0.0.beta.20"
-  gem "webrat", :git => "git://github.com/kalv/webrat.git"
   gem "dummy_data"
+  gem "rspec-rails", ">= 2.0.0.beta.20"
+  gem 'sqlite3-ruby', :require => 'sqlite3'
+  gem "webrat", :git => "git://github.com/kalv/webrat.git"
 end
