--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
+*.gem
+*.log
 .DS_Store
 .bundle
 .rspec
 db/*.sqlite3
 db/*.sqlite3-journal
 log/*.log
-tmp/**/*
-webrat.log
 pkg/*
 spec/dummy/db/*.sqlite3
 spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
+tmp/**/*
