--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ db/*.sqlite3
 db/*.sqlite3-journal
 log/*.log
 pkg/*
-spec/dummy/db/*.sqlite3
-spec/dummy/db/*.sqlite3-journal
-spec/dummy/log/*.log
+spec/dummy_app/db/*.sqlite3
+spec/dummy_app/db/*.sqlite3-journal
+spec/dummy_app/log/*.log
 tmp/**/*
