--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -8,8 +8,8 @@ gem 'devise'
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development, :test do
-  gem "dummy_data"
-  gem "rspec-rails", ">= 2.0.0.beta.20"
+  gem 'dummy_data'
+  gem 'rspec-rails', '>= 2.0.0.beta.20'
   gem 'sqlite3-ruby', :require => 'sqlite3'
-  gem "webrat", :git => "git://github.com/kalv/webrat.git"
+  gem 'webrat', :git => 'git://github.com/kalv/webrat.git'
 end
