dummy_app's schema.rb will never be on sync with database as the db itself has been excluded from VC

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ db/*.sqlite3
 db/*.sqlite3-journal
 log/*.log
 pkg/*
+spec/dummy_app/db/schema.rb
 spec/dummy_app/db/*.sqlite3
 spec/dummy_app/db/*.sqlite3-journal
 spec/dummy_app/log/*.log
