--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -11,6 +11,6 @@ gem 'rails_admin', :path => "../../"
 group :development, :test do
   gem "dummy_data"
   gem "rspec-rails", ">= 2.0.0.beta.20"
-  gem 'sqlite3-ruby', :require => 'sqlite3'
+  gem 'mysql2'
   gem "webrat", :git => "git://github.com/kalv/webrat.git"
 end
