Add simple performance tests. The performance tests don't work on ruby 1.9.2 for an unknown reason - works fine with 1.8.7

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -9,8 +9,9 @@ gem 'rails_admin', :path => "../../"
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development, :test do
+  gem "ruby-prof"
   gem "dummy_data"
-  gem "rspec-rails", ">= 2.0.0.beta.20"
+  gem "rspec-rails", ">= 2.0.1"
   gem 'sqlite3-ruby', :require => 'sqlite3'
   gem "webrat", :git => "git://github.com/kalv/webrat.git"
 end
