--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -3,15 +3,15 @@ source 'http://rubygems.org'
 gem 'rails', '3.0.1'
 gem 'builder'
 gem 'devise'
-gem 'rails_admin', :path => "../../"
+gem 'rails_admin', :path => '../../'
 
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development, :test do
-  gem "ruby-prof"
-  gem "dummy_data"
-  gem "rspec-rails", ">= 2.0.1"
+  gem 'ruby-prof'
+  gem 'dummy_data'
+  gem 'rspec-rails'
   gem 'sqlite3-ruby', :require => 'sqlite3'
-  gem "webrat", :git => "http://github.com/kalv/webrat.git"
+  gem 'webrat', :git => 'http://github.com/kalv/webrat.git'
 end
