Upgrade to Rails 3.0.2

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,6 @@
 source 'http://rubygems.org'
 
-gem 'rails', '3.0.1'
+gem 'rails', '~> 3.0.2'
 gem 'builder'
 gem 'devise'
 gem 'rails_admin', :path => '../../'
