--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,16 +1,18 @@
 source 'http://rubygems.org'
 
 gem 'rails', '~> 3.0.3'
-gem 'builder'
-gem 'devise'
+gem 'builder', '~> 2.1.0'
+gem 'devise', '~> 1.1'
 gem 'rails_admin', :path => '../../'
 
 # Bundle gems for the local environment. Make sure to
 # put test-only gems in this group so their generators
 # and rake tasks are available in development mode:
 group :development, :test do
-  gem 'dummy_data'
-  gem 'rspec-rails'
-  gem 'sqlite3-ruby', :require => 'sqlite3'
-  gem 'webrat', :git => 'http://github.com/kalv/webrat.git'
+  if 'java' == RUBY_PLATFORM
+    gem 'jdbc-sqlite3', '~> 3.6'
+    gem 'activerecord-jdbcsqlite3-adapter', '~> 0.9'
+  else
+    gem 'sqlite3-ruby', '~> 1.3'
+  end
 end
