--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
 *.gem
 *.log
 *.rbc
+*.swp
 .DS_Store
 .bundle
+Gemfile.lock
+coverage/*
 db/*.sqlite3
 db/*.sqlite3-journal
 doc/*
-coverage/*
 log/*.log
 pkg/*
-spec/dummy_app/db/schema.rb
 spec/dummy_app/db/*.sqlite3
 spec/dummy_app/db/*.sqlite3-journal
+spec/dummy_app/db/schema.rb
 spec/dummy_app/log/*.log
 tmp/**/*
-*.swp
