--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -3,6 +3,7 @@ source 'http://rubygems.org'
 gem 'rails', '~> 3.0.3'
 gem 'builder', '~> 2.1.0'
 gem 'devise', '~> 1.1'
+gem 'paperclip', '~> 2.3.8'
 gem 'rails_admin', :path => '../../'
 
 # Bundle gems for the local environment. Make sure to
