--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -28,7 +28,7 @@ group :development, :test do
     when 'postgresql'
       gem 'pg', '~> 0.10'
     else
-      gem 'sqlite3-ruby', '~> 1.3'
+      gem 'sqlite3', '~> 1.3'
     end
   end
 end
