--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,6 @@
 source 'http://rubygems.org'
 
-gem 'rails', '~> 3.0.4'
+gem 'rails', '~> 3.0.6.rc1'
 gem 'devise', '~> 1.1'
 gem 'paperclip', '~> 2.3'
 gem 'rails_admin', :path => '../../'
