--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,13 @@
 *.swp
 .DS_Store
 .bundle
+.idea/
 .rvmrc
 .yardoc
+/.emacs.desktop
+/rails_admin.gems
+/spec/generators/tmp
+/spec/lib/tmp
 Gemfile.lock
 coverage/*
 db/*.sqlite3
@@ -18,7 +23,3 @@ spec/dummy_app/db/*.sqlite3-journal
 spec/dummy_app/db/schema.rb
 spec/dummy_app/log/*.log
 tmp/**/*
-/.emacs.desktop
-.idea/
-
-/rails_admin.gems
