Update Gemfile for dummy app to Devise 1.3.4 Remove and gitignore dummy app's Gemfile.lock, as this doesn't need to be committed, but caused me lots of upgrade issues with Devise.

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,5 @@ spec/dummy_app/db/*.sqlite3
 spec/dummy_app/db/*.sqlite3-journal
 spec/dummy_app/db/schema.rb
 spec/dummy_app/log/*.log
+spec/dummy_app/Gemfile.lock
 tmp/**/*
