Added sass to Gemfile as a dependency
Not sure this is 100% a dependency, but css was not getting generated correctly from .sass files if only haml and haml-rails were installed without the sass gem.

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -6,6 +6,7 @@ gem 'paperclip', '~> 2.3'
 gem 'haml-rails', '~> 0.3.4'
 gem 'rails_admin', :path => '../../'
 gem 'mlb'
+gem 'sass'
 
 group :development, :test do
 
