--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,7 +1,7 @@
 source 'http://rubygems.org'
 
 gem 'rake', '~>0.8.7'
-gem 'rails', '~> 3.0.7'
+gem 'rails', '~> 3.1.0.rc1'
 gem 'rails_admin', :path => '../../'
 gem 'devise', '~> 1.3.4'
 gem 'mlb'
