--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,7 @@
 source 'http://rubygems.org'
 
 gem 'rails', '3.0.9'
+gem 'carrierwave', '~> 0.5.6'
 gem 'rails_admin', :path => '../../'
 gem 'devise', '~> 1.3.4'
 gem 'mlb', '~> 0.5.4'
