--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
-before_script: "cd spec/dummy_app && bundle install && bundle exec rake rails_admin:prepare_ci_env db:create db:migrate"
+script: spec/ci.rb
 rvm:
   - 1.8.7
-  - 1.9.2
-  - rbx
-  - ree
-  - ruby-head
 env:
   - "CI_DB_ADAPTER=sqlite3"
   - "CI_DB_ADAPTER=postgresql"
