--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ script: spec/ci.sh
 rvm:
   - 1.8.7
 env:
-  - "CI_DB_ADAPTER=sqlite3 CI_DB_USERNAME= CI_DB_PASSWORD="
-  - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME= CI_DB_PASSWORD="
+  - "CI_DB_ADAPTER=sqlite3"
+  - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres CI_DB_PASSWORD="
   - "CI_DB_ADAPTER=mysql CI_DB_USERNAME= CI_DB_PASSWORD="
+  - "CI_DB_ADAPTER=mysql2 CI_DB_USERNAME= CI_DB_PASSWORD="
 notifications:
   irc: "irc.freenode.org#railsadmin"
