--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 script: spec/ci.sh
 rvm:
   - 1.8.7
+  - 1.9.2
+  - rbx
+  - ree
+  - ruby-head
 env:
   - "CI_DB_ADAPTER=sqlite3 CI_DB_USERNAME= CI_DB_PASSWORD="
   - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME= CI_DB_PASSWORD="
