--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - ruby-head
 env:
   - "CI_DB_ADAPTER=sqlite3 CI_DB_USERNAME= CI_DB_PASSWORD="
-  - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME= CI_DB_PASSWORD="
+  - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres CI_DB_PASSWORD="
   - "CI_DB_ADAPTER=mysql CI_DB_USERNAME= CI_DB_PASSWORD="
 notifications:
   irc: "irc.freenode.org#railsadmin"
