--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,16 @@
 source 'http://rubygems.org'
 
-gem 'rails', '~> 3.1.0'
+gem 'rails', '~>3.1.0'
+gem 'json'
+
+# Gems used only for assets and not required
+# in production environments by default.
+group :assets do
+  gem 'sass-rails', '~> 3.1.0.rc'
+  gem 'coffee-rails', '~> 3.1.0.rc'
+  gem 'uglifier'
+end
+
 gem 'rails_admin', :path => '../../'
 gem 'devise', '~> 1.4'
 gem 'mlb', '~> 0.5.5'
