--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -2,12 +2,13 @@ source 'http://rubygems.org'
 
 gem 'rails', '~>3.1.0'
 gem 'json'
+gem 'unicorn'
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails', '~> 3.1.0.rc'
-  gem 'coffee-rails', '~> 3.1.0.rc'
+  gem 'sass-rails', '~> 3.1.0'
+  gem 'coffee-rails', '~> 3.1.0'
   gem 'uglifier'
 end
 
