--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,23 +1,17 @@
 source 'http://rubygems.org'
 
-gem 'rails', '~>3.1.0'
-gem 'json'
+gem 'rails', '~> 3.1'
+gem 'devise', '~> 1.4'
+gem 'rails_admin', :path => '../../'
+gem 'mlb', '~> 0.5'
+gem 'paperclip', '~> 2.4'
 
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails', '~> 3.1.0'
-  gem 'coffee-rails', '~> 3.1.0'
-  gem 'uglifier'
-end
-
-gem 'rails_admin', :path => '../../'
-gem 'devise', '~> 1.4'
-gem 'mlb', '~> 0.5.5'
-gem 'paperclip', '~> 2.3.16'
-
-platforms :jruby, :mingw_18, :ruby_18 do
-  gem 'fastercsv', '~> 1.5.4'
+  gem 'sass-rails', '~> 3.1'
+  gem 'coffee-rails', '~> 3.1'
+  gem 'uglifier', '~> 1.0'
 end
 
 group :development, :test do
@@ -48,4 +42,8 @@ group :development, :test do
       gem 'sqlite3', '~> 1.3'
     end
   end
+end
+
+platforms :jruby, :mingw_18, :ruby_18 do
+  gem 'fastercsv', '~> 1.5'
 end
