--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ script: spec/ci.sh
 rvm:
   - 1.8.7
   - 1.9.2
-  - rbx-18mode
-  - rbx-19mode
+  - rbx
+  - rbx-2.0
   - ree
 env:
   - "CI_DB_ADAPTER=sqlite3"
