--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ before_install: gem install bundler --pre
 bundler_args: "--without debug"
 script: spec/ci.sh
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
   - rbx
   - ree
@@ -13,3 +11,12 @@ env:
   - "CI_DB_ADAPTER=mysql"
 notifications:
   irc: "irc.freenode.org#railsadmin"
+exclude:
+  - rvm: ree
+    env: "CI_DB_ADAPTER=sqlite3"
+  - rvm: ree
+    env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+  - rvm: rbx
+    env: "CI_DB_ADAPTER=sqlite3"
+  - rvm: rbx
+    env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
