--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,13 @@ env:
   - "CI_DB_ADAPTER=mysql"
 notifications:
   irc: "irc.freenode.org#railsadmin"
-exclude:
-  - rvm: ree
-    env: "CI_DB_ADAPTER=sqlite3"
-  - rvm: ree
-    env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
-  - rvm: rbx
-    env: "CI_DB_ADAPTER=sqlite3"
-  - rvm: rbx
-    env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+matrix:
+  exclude:
+    - rvm: ree
+      env: "CI_DB_ADAPTER=sqlite3"
+    - rvm: ree
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+    - rvm: rbx
+      env: "CI_DB_ADAPTER=sqlite3"
+    - rvm: rbx
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
