--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ env:
   - "CI_DB_ADAPTER=sqlite3"
   - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
   - "CI_DB_ADAPTER=mysql"
+gemfile:
+  - Gemfile
+  - Gemfile31
 notifications:
   irc: "irc.freenode.org#railsadmin"
 matrix:
