--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,33 @@ matrix:
   exclude:
     - rvm: ree
       env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile
+    - rvm: ree
+      env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile31
     - rvm: ree
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile
+    - rvm: ree
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile31
+
     - rvm: rbx
       env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile
+    - rvm: rbx
+      env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile31
     - rvm: rbx
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile
+    - rvm: rbx
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile31
+
+    - rvm: 1.9.3
+      env: "CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile
+    - rvm: 1.9.3
+      env: "CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile31
