--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ rvm:
   - 1.9.3
   - rbx
   - ree
+  - jruby
 env:
   - "CI_DB_ADAPTER=sqlite3"
   - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
@@ -28,6 +29,9 @@ matrix:
     - rvm: ree
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile31
+    - rvm: ree
+      gemfile: Gemfile31
+      env: "CI_DB_ADAPTER=mysql"
 
     - rvm: rbx
       env: "CI_DB_ADAPTER=sqlite3"
@@ -41,6 +45,25 @@ matrix:
     - rvm: rbx
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile31
+    - rvm: rbx
+      env: "CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile31      
+
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile31
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile31
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile31
 
     - rvm: 1.9.3
       env: "CI_DB_ADAPTER=mysql"
@@ -48,16 +71,6 @@ matrix:
     - rvm: 1.9.3
       env: "CI_DB_ADAPTER=mysql"
       gemfile: Gemfile31
-
-    - gemfile: Gemfile31
-      rvm: ree
-      env: "CI_DB_ADAPTER=mysql"
-
-    - gemfile: Gemfile31
-      rvm: rbx
-      env: "CI_DB_ADAPTER=mysql"
-
-    - gemfile: Gemfile31
-      rvm: 1.9.3
+    - rvm: 1.9.3
+      gemfile: Gemfile31
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
-
