fix for see + try travis jruby/sqlite3

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,22 +47,22 @@ matrix:
       gemfile: Gemfile31
     - rvm: rbx
       env: "CI_DB_ADAPTER=mysql"
-      gemfile: Gemfile31      
+      gemfile: Gemfile31
 
     - rvm: jruby
-      env: "CI_DB_ADAPTER=sqlite3"
+      env: "CI_DB_ADAPTER=mysql"
       gemfile: Gemfile
-    - rvm: jruby
-      env: "CI_DB_ADAPTER=sqlite3"
-      gemfile: Gemfile31
-    - rvm: jruby
-      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
-      gemfile: Gemfile
-    - rvm: jruby
-      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
-      gemfile: Gemfile31
     - rvm: jruby
       env: "CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile31
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile31
+    - rvm: jruby
+      env: "CI_DB_ADAPTER=sqlite3"
       gemfile: Gemfile31
 
     - rvm: 1.9.3
