--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ script: spec/ci.sh
 rvm:
   - 1.8.7
   - 1.9.3
-  - jruby
+  - jruby-18mode
 env:
   - "CI_DB_ADAPTER=sqlite3"
   - "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
@@ -46,19 +46,19 @@ matrix:
       env: "CI_DB_ADAPTER=mysql"
       gemfile: Gemfile31
 
-    - rvm: jruby
+    - rvm: jruby-18mode
       env: "CI_DB_ADAPTER=mysql"
       gemfile: Gemfile
-    - rvm: jruby
+    - rvm: jruby-18mode
       env: "CI_DB_ADAPTER=mysql"
       gemfile: Gemfile31
-    - rvm: jruby
+    - rvm: jruby-18mode
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile
-    - rvm: jruby
+    - rvm: jruby-18mode
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile31
-    - rvm: jruby
+    - rvm: jruby-18mode
       env: "CI_DB_ADAPTER=sqlite3"
       gemfile: Gemfile31
 
