--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,19 @@ gemfile:
 language: ruby
 matrix:
   exclude:
-    - rvm: ree
+    - rvm: 1.8.7
       env: "CI_DB_ADAPTER=sqlite3"
       gemfile: Gemfile
-    - rvm: ree
+    - rvm: 1.8.7
       env: "CI_DB_ADAPTER=sqlite3"
       gemfile: Gemfile31
-    - rvm: ree
+    - rvm: 1.8.7
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile
-    - rvm: ree
+    - rvm: 1.8.7
       env: "CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
       gemfile: Gemfile31
-    - rvm: ree
+    - rvm: 1.8.7
       gemfile: Gemfile31
       env: "CI_DB_ADAPTER=mysql"
 
