--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,29 +1,8 @@
 source 'https://rubygems.org'
 
 gem 'rails', '~> 3.2'
-gem 'devise', '~> 2.0'
-gem 'bson_ext'
-gem 'mongoid'
-gem 'rails_admin', :path => '../../'
-gem 'mlb', '~> 0.5'
-gem 'paperclip', '~> 2.4'
-gem 'mini_magick'
-gem 'carrierwave'
-gem 'dragonfly'
 
-# Gems used only for assets and not required
-# in production environments by default.
-group :assets do
-  gem 'sass-rails',   '~> 3.2'
-  gem 'coffee-rails', '~> 3.2'
-
-  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
-  # gem 'therubyracer'
-
-  gem 'uglifier', '>= 1.0.3'
-end
-
-group :development, :test do
+group :active_record do
   platforms :jruby do
     gem 'jruby-openssl', '~> 0.7'
     # activerecord-jdbc-adapter does not yet have a rails 3.1 compatible release
@@ -51,6 +30,32 @@ group :development, :test do
       gem 'sqlite3', '~> 1.3'
     end
   end
+  gem 'paperclip', '~> 2.4'
+  gem 'carrierwave'
+  gem 'dragonfly'
+end
+
+group :mongoid do
+  gem 'bson_ext'
+  gem 'mongoid'
+  gem 'mongoid-paperclip', :require => 'mongoid_paperclip'
+end
+
+gem 'devise', '~> 2.0'
+gem 'rails_admin', :path => '../../'
+gem 'mlb', '~> 0.5'
+gem 'mini_magick'
+
+# Gems used only for assets and not required
+# in production environments by default.
+group :assets do
+  gem 'sass-rails',   '~> 3.2'
+  gem 'coffee-rails', '~> 3.2'
+
+  # See https://github.com/sstephenson/execjs#readme for more supported runtimes
+  # gem 'therubyracer'
+
+  gem 'uglifier', '>= 1.0.3'
 end
 
 platforms :jruby, :mingw_18, :ruby_18 do
