Freeze Paperclip's version to 2.x because of incompatibility with jruby-18mode

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -37,6 +37,7 @@ group :mongoid do
   gem 'bson_ext'
   gem 'mongoid'
   gem 'mongoid-paperclip', :require => 'mongoid_paperclip'
+  gem 'paperclip', '~> 2.4'
   gem 'carrierwave-mongoid', :require => 'carrierwave/mongoid'
   gem 'dragonfly'
 end
