--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
   - 1.8.7
   - 1.9.3
   - jruby-18mode
+  - rbx-18mode
 env:
   - "CI_ORM=active_record CI_DB_ADAPTER=sqlite3"
   - "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
@@ -41,6 +42,16 @@ matrix:
       gemfile: Gemfile31
       env: "CI_ORM=mongoid CI_ORM_VERSION=head"
 
+    - rvm: 1.9.3
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile
+    - rvm: 1.9.3
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+      gemfile: Gemfile31
+    - rvm: 1.9.3
+      gemfile: Gemfile31
+      env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+
     - rvm: jruby-18mode
       env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
       gemfile: Gemfile
@@ -66,14 +77,29 @@ matrix:
       gemfile: Gemfile31
       env: "CI_ORM=mongoid CI_ORM_VERSION=head"
 
-    - rvm: 1.9.3
+    - rvm: rbx-18mode
       env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
       gemfile: Gemfile
-    - rvm: 1.9.3
+    - rvm: rbx-18mode
       env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
       gemfile: Gemfile31
-    - rvm: 1.9.3
-      gemfile: Gemfile31
+    - rvm: rbx-18mode
       env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile
+    - rvm: rbx-18mode
+      env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+      gemfile: Gemfile31
+    - rvm: rbx-18mode
+      env: "CI_ORM=active_record CI_DB_ADAPTER=sqlite3"
+      gemfile: Gemfile31
+    - rvm: rbx-18mode
+      gemfile: Gemfile
+      env: "CI_ORM=mongoid CI_ORM_VERSION=head"
+    - rvm: rbx-18mode
+      gemfile: Gemfile31
+      env: "CI_ORM=mongoid"
+    - rvm: rbx-18mode
+      gemfile: Gemfile31
+      env: "CI_ORM=mongoid CI_ORM_VERSION=head"
 notifications:
   irc: "irc.freenode.org#railsadmin"
