--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,16 @@ env:
   - "CI_ORM=mongoid"
   - "CI_ORM=mongoid CI_ORM_VERSION=head"
 language: ruby
+matrix:
+  exclude:
+    - rvm: jruby-18mode
+      env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+    - rvm: jruby-18mode
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+    - rvm: jruby-18mode
+      env: "CI_ORM=mongoid CI_ORM_VERSION=head"
+    - rvm: 1.8.7
+      env: "CI_ORM=mongoid CI_ORM_VERSION=head"
 notifications:
   irc: "irc.freenode.org#railsadmin"
 script: spec/ci.sh
