--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -28,7 +28,7 @@ group :active_record do
       gem 'sqlite3', '~> 1.3'
     end
   end
-  gem 'paperclip'
+  gem 'paperclip', '~> 2.4'
   gem 'carrierwave'
   gem 'dragonfly'
 end
@@ -45,7 +45,7 @@ group :mongoid do
     gem 'carrierwave-mongoid', :require => 'carrierwave/mongoid'
   end
   gem 'mongoid-paperclip', :require => 'mongoid_paperclip', :git => 'git://github.com/mshibuya/mongoid-paperclip.git', :branch => 'fix-stop-patching-logger'
-  gem 'paperclip'
+  gem 'paperclip', '~> 2.4'
   gem 'dragonfly'
 end
 
