--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,4 +1,4 @@
-source 'https://rubygems.org'
+source :rubygems
 
 gem 'rails', '~> 3.2'
 gem 'strong_parameters', github: 'rails/strong_parameters' # 0.1.5 min, not released yet
