--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -34,6 +34,7 @@ gem 'mini_magick', '~> 3.4'
 gem 'mlb', '~> 0.5'
 gem 'paperclip', '~> 3.3'
 gem 'rails_admin', :path => '../../'
+gem 'ruby-filemagic'
 
 # Gems used only for assets and not required
 # in production environments by default.
