--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,9 @@ matrix:
       env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
 notifications:
   irc: "irc.freenode.org#railsadmin"
-script: spec/ci.sh
+before_script:
+  - cd spec/dummy_app
+  - bundle install
+  - bundle exec rake rails_admin:prepare_ci_env db:create db:migrate
 services:
   - mongodb
