--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,17 @@ rvm:
 env:
   - "CI_ORM=mongoid"
   - "CI_ORM=active_record CI_DB_ADAPTER=sqlite3"
-  - "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+  - "CI_ORM=active_record CI_DB_ADAPTER=mysql2"
   - "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
 language: ruby
 matrix:
   exclude:
     - rvm: jruby-19mode
-      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql2"
     - rvm: jruby-19mode
       env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
     - rvm: 1.9.3
-      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql2"
     - rvm: 1.9.3
       env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
 notifications:
