--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,8 @@ notifications:
 before_script:
   - cd spec/dummy_app
   - bundle install
-  - bundle exec rake rails_admin:prepare_ci_env db:create db:migrate
+  - bundle exec rake rails_admin:prepare_ci_env
+  - bundle exec rake db:create db:migrate
   - cd ../../
 services:
   - mongodb
