--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,6 @@ before_script:
   - bundle install
   - bundle exec rake rails_admin:prepare_ci_env db:create db:migrate
   - cd ../../
+script: xvfb-run rspec
 services:
   - mongodb
