Also use sass-rails master for dummy_app

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -48,7 +48,7 @@ gem 'rails_admin', :path => '../../'
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails', '~> 4.0.0.beta1'
+  gem 'sass-rails', '~> 4.0.0.rc1', github: 'rails/sass-rails'
   gem 'coffee-rails', '~> 4.0.0.beta1'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
