Rails 4.0.0 is out!

--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,6 @@
 source 'https://rubygems.org'
 
-gem 'rails', '~> 4.0.0.rc2'
+gem 'rails', '~> 4.0.0'
 gem 'rack-cache', :require => 'rack/cache'
 
 group :active_record do
@@ -48,8 +48,8 @@ gem 'rails_admin', :path => '../../'
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
-  gem 'sass-rails', '~> 4.0.0.rc2'
-  gem 'coffee-rails', '~> 4.0.0.rc2'
+  gem 'sass-rails', '~> 4.0.0'
+  gem 'coffee-rails', '~> 4.0.0'
 
   # See https://github.com/sstephenson/execjs#readme for more supported runtimes
   # gem 'therubyracer'
