--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -44,6 +44,7 @@ gem 'mini_magick', '>= 3.4'
 gem 'mlb', '>= 0.6'
 gem 'paperclip', '>= 3.4'
 gem 'rails_admin', :path => '../../'
+gem 'paper_trail', '>= 3.0.0.rc2'
 
 # Gems used only for assets and not required
 # in production environments by default.
