--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ bundler_args: --without development
 rvm:
   - 1.9.3
   - 2.0.0
+  - rbx
   - ruby-head
 env:
   - CI_ORM=mongoid
@@ -9,24 +10,25 @@ env:
 language: ruby
 matrix:
   include:
-    - rvm: jruby-19mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
-    - rvm: jruby-19mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
-    - rvm: jruby-20mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
-    - rvm: jruby-20mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
-    - rvm: jruby-head
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
-    - rvm: jruby-head
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: 2.0.0
       env: CI_ORM=active_record CI_DB_ADAPTER=mysql2
     - rvm: 2.0.0
       env: CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres
+    - rvm: jruby-19mode
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-19mode
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-20mode
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-20mode
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-head
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+    - rvm: jruby-head
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
   allow_failures:
     - rvm: jruby-head
+    - rvm: rbx
     - rvm: ruby-head
   fast_finish: true
 notifications:
