--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -13,7 +13,7 @@ group :active_record do
       gem 'activerecord-jdbcpostgresql-adapter', '>= 1.2'
       gem 'jdbc-postgres', '>= 9.2'
     else
-      gem 'activerecord-jdbcsqlite3-adapter', '>= 1.2'
+      gem 'activerecord-jdbcsqlite3-adapter', '>= 1.3.0.beta1'
       gem 'jdbc-sqlite3', '>= 3.7'
     end
   end
@@ -31,9 +31,9 @@ group :active_record do
 end
 
 group :mongoid do
-  gem 'mongoid', github: 'mongoid/mongoid'
+  gem 'mongoid', :github => 'mongoid/mongoid'
   gem 'mongoid-paperclip', '>= 0.0.8', :require => 'mongoid_paperclip'
-  gem 'mongoid-grid_fs', github: 'ahoward/mongoid-grid_fs'
+  gem 'mongoid-grid_fs', :github => 'ahoward/mongoid-grid_fs'
   gem 'carrierwave-mongoid', '>= 0.6.3', :require => 'carrierwave/mongoid'
 end
 
