--- a/.travis.yml
+++ b/.travis.yml
@@ -16,19 +16,19 @@ matrix:
     - rvm: 2.1.0
       env: CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres
     - rvm: jruby-19mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-19mode
       env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-20mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-20mode
       env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-21mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-21mode
       env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-head
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
     - rvm: jruby-head
       env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
   allow_failures:
