--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -56,3 +56,9 @@ group :assets do
 
   gem 'uglifier', '>= 1.3'
 end
+
+platforms :rbx do
+  gem 'racc'
+  gem 'rubysl'
+  gem 'rubysl-test-unit'
+end
