--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -64,3 +64,7 @@ AccessModifierIndentation:
 
 EmptyLinesAroundAccessModifier:
   Enabled: true
+
+# Align ends correctly
+EndAlignment:
+  AlignWith: variable
