Align whens/elses with ends in case statements

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -68,3 +68,8 @@ EmptyLinesAroundAccessModifier:
 # Align ends correctly
 EndAlignment:
   AlignWith: variable
+
+# Indentation of when/else
+CaseIndentation:
+  IndentWhenRelativeTo: end
+  IndentOneStep: false
