--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -42,7 +42,7 @@ gem 'devise', '>= 3.2'
 gem 'dragonfly', '~> 0.9.0'
 gem 'mini_magick', '>= 3.4'
 gem 'mlb', '>= 0.7'
-gem 'paperclip', '>= 3.4'
+gem 'paperclip', '3.5.2'
 gem 'rails_admin', path: '../../'
 
 # Gems used only for assets and not required
