--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -38,10 +38,10 @@ end
 
 gem 'carrierwave', '>= 0.8'
 gem 'devise', '>= 2.2'
-gem 'dragonfly', '>= 0.9'
+gem 'dragonfly', '~> 0.9.0'
 gem 'mini_magick', '>= 3.4'
 gem 'mlb', '>= 0.6'
-gem 'paperclip', '>= 3.4'
+gem 'paperclip', '3.5.2'
 gem 'rails_admin', :path => '../../'
 
 # Gems used only for assets and not required
