Fix RuboCop offenses introduced in version 0.19.0

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -89,3 +89,19 @@ RaiseArgs:
 
 TrailingComma:
   Enabled: false
+
+PercentLiteralDelimiters:
+  PreferredDelimiters:
+    '%':  ()
+    '%i': ()
+    '%q': ()
+    '%Q': ()
+    '%r': '{}'
+    '%s': ()
+    '%w': '[]'
+    '%W': '[]'
+    '%x': ()
+
+FileName:
+  Exclude:
+    - 'lib/rails_admin/bootstrap-sass.rb'
