--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -31,9 +31,8 @@ group :active_record do
 end
 
 group :mongoid do
-  gem 'mongoid', github: 'mongoid/mongoid'
+  gem 'mongoid', '~> 4.0.0.beta1'
   gem 'mongoid-paperclip', '>= 0.0.8', require: 'mongoid_paperclip'
-  gem 'mongoid-grid_fs', github: 'ahoward/mongoid-grid_fs'
   gem 'carrierwave-mongoid', '>= 0.6.3', require: 'carrierwave/mongoid'
 end
 
