Add 2.1.1 to Travis matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - jruby-19mode
   - 1.9.3
   - 2.0.0
+  - 2.1.1
 env:
   - "CI_ORM=mongoid"
   - "CI_ORM=active_record CI_DB_ADAPTER=sqlite3"
@@ -19,8 +20,12 @@ matrix:
       env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
     - rvm: 1.9.3
       env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
+    - rvm: 2.0.0
+      env: "CI_ORM=active_record CI_DB_ADAPTER=mysql"
+    - rvm: 2.0.0
+      env: "CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres"
   allow_failures:
-    - jruby-19mode
+    - rvm: jruby-19mode
 notifications:
   irc: "irc.freenode.org#railsadmin"
 before_script:
