--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -43,7 +43,6 @@ gem 'mini_magick', '>= 3.4'
 gem 'mlb', '>= 0.7'
 gem 'paperclip', '3.5.2'
 gem 'foundation-rails'
-gem 'rails_admin', path: '../../'
 
 # Gems used only for assets and not required
 # in production environments by default.
@@ -59,4 +58,9 @@ end
 
 group :development, :test do
   gem 'pry'
+end
+
+group :app_express do
+  gem 'express_admin', path: '../../../express_admin'
+  gem 'rails_admin', path: '../..'
 end
