--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,30 @@
-before_install: gem update bundler
-bundler_args: --without development
+language: ruby
+
 rvm:
   - 1.9.3
   - 2.0.0
   - 2.1.1
   - rbx-2
   - ruby-head
+
+services:
+  - mongodb
+
+bundler_args: --without development --jobs=3 --retry=3
+
+sudo: false
+
+before_script:
+  - cd spec/dummy_app
+  - bundle install
+  - bundle exec rake rails_admin:prepare_ci_env
+  - bundle exec rake db:create db:migrate
+  - cd ../../
+
 env:
   - CI_ORM=mongoid
   - CI_ORM=active_record CI_DB_ADAPTER=sqlite3
-language: ruby
+
 matrix:
   include:
     - rvm: 2.1.1
@@ -33,13 +48,6 @@ matrix:
     - rvm: rbx-2
     - rvm: ruby-head
   fast_finish: true
+
 notifications:
   irc: irc.freenode.org#railsadmin
-before_script:
-  - cd spec/dummy_app
-  - bundle install
-  - bundle exec rake rails_admin:prepare_ci_env
-  - bundle exec rake db:create db:migrate
-  - cd ../../
-services:
-  - mongodb
