Update simplecov dependency to >= 0.9

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,5 @@
 language: ruby
 
-rvm:
-  - 1.9.3
-  - 2.0.0
-  - 2.1.1
-  - rbx-2
-  - ruby-head
-
-services:
-  - mongodb
-
-bundler_args: --without development --jobs=3 --retry=3
-
-sudo: false
-
-cache: bundler
-
 before_script:
   - cd spec/dummy_app
   - bundle install
@@ -23,28 +7,46 @@ before_script:
   - bundle exec rake db:create db:migrate
   - cd ../../
 
+bundler_args: --without development --jobs=3 --retry=3
+
+cache: bundler
+
 env:
   - CI_ORM=mongoid
   - CI_ORM=active_record CI_DB_ADAPTER=sqlite3
+  global:
+    - JRUBY_OPTS="$JRUBY_OPTS --debug"
+
+rvm:
+  - 1.9.3
+  - 2.0.0
+  - 2.1
+  - rbx-2
+  - ruby-head
+
+services:
+  - mongodb
+
+sudo: false
 
 matrix:
   include:
-    - rvm: 2.1.1
+    - rvm: 2.1
       env: CI_ORM=active_record CI_DB_ADAPTER=mysql2
-    - rvm: 2.1.1
+    - rvm: 2.1
       env: CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres
-    - rvm: 2.1.1
-      env: RAILS_VER=4.0 CI_ORM=active_record CI_DB_ADAPTER=sqlite3
-    - rvm: 2.1.1
-      env: RAILS_VER=4.0 CI_ORM=mongoid
+    - rvm: 2.1
+      env: RAILS_VERSION=4.0 CI_ORM=active_record CI_DB_ADAPTER=sqlite3
+    - rvm: 2.1
+      env: RAILS_VERSION=4.0 CI_ORM=mongoid
     - rvm: jruby-19mode
-      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid
     - rvm: jruby-19mode
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3
     - rvm: jruby-head
-      env: CI_ORM=mongoid JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=mongoid
     - rvm: jruby-head
-      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3 JRUBY_OPTS="$JRUBY_OPTS --debug"
+      env: CI_ORM=active_record CI_DB_ADAPTER=sqlite3
   allow_failures:
     - rvm: jruby-head
     - rvm: rbx-2
