--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,9 @@ bundler_args: --without development --jobs=3 --retry=3
 cache: bundler
 
 env:
-  - CI_ORM=mongoid
-  - CI_ORM=active_record CI_DB_ADAPTER=sqlite3
+  matrix:
+    - CI_ORM=mongoid
+    - CI_ORM=active_record CI_DB_ADAPTER=sqlite3
   global:
     - JRUBY_OPTS="$JRUBY_OPTS --debug"
 
