--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,10 @@ sudo: false
 matrix:
   include:
     - rvm: 2.1
+      env: RAILS_VERSION=4.2 CI_ORM=active_record CI_DB_ADAPTER=sqlite3
+    - rvm: 2.1
+      env: RAILS_VERSION=4.2 CI_ORM=mongoid
+    - rvm: 2.1
       env: CI_ORM=active_record CI_DB_ADAPTER=mysql2
     - rvm: 2.1
       env: CI_ORM=active_record CI_DB_ADAPTER=postgresql CI_DB_USERNAME=postgres
